@@ -1,6 +1,7 @@
 Changelog for Miosix np embedded OS
 
 v1.58
+- Added _times_r in syscalls.cpp to make clock() in time.h work
 - Added exception thread safety test to testsuite.
 - Added class ExceptionHandlingData that keeps a per-thread data structure
   used to make C++ exceptions thead safe.
